--- a/View/home.html
+++ b/View/home.html
@@ -1,6 +1,13 @@
-<html>
-	<head>Last-Man-Standing</head>
-	<body>
-		<h1>Last Man Standing</h1>
-	</body>
+<html ng-app>
+  <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+  </head>
+  <body>
+    <div>
+      <label>Name:</label>
+      <input type="text" ng-model="yourName" placeholder="Enter a name here">
+      <hr>
+      <h1>Hello {{yourName}}!</h1>
+    </div>
+  </body>
 </html>
